[gd_scene load_steps=38 format=2]

[ext_resource path="res://scene/vfx/Pool.tscn" type="PackedScene" id=1]
[ext_resource path="res://scene/vfx/Cloud.tscn" type="PackedScene" id=2]
[ext_resource path="res://scene/Sunset.gd" type="Script" id=3]
[ext_resource path="res://asset/ui/Roboto-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://asset/shader/CloudShader.tres" type="Shader" id=5]
[ext_resource path="res://asset/img/vfx/cloud3.png" type="Texture" id=6]
[ext_resource path="res://asset/img/vfx/cloud2.png" type="Texture" id=7]
[ext_resource path="res://asset/img/vfx/cloud4.png" type="Texture" id=8]

[sub_resource type="Shader" id=31]
code = "shader_type canvas_item;

uniform float hue: hint_range(0.0, 1.0, 0.001);

vec3 hue_shift(vec3 color) {
	vec3 p = vec3(0.55735) * dot(vec3(0.5735), color);
	vec3 u = color - p;
	vec3 v = cross(vec3(0.55735), u);
	color = u * cos(hue * 6.2832) + v * sin(hue * 6.2832) + p;
	return color;
}

void fragment() {
	vec4 tex_color = texture(TEXTURE, UV);
	COLOR = vec4(hue_shift(tex_color.rgb), tex_color.a);
}"

[sub_resource type="ShaderMaterial" id=32]
shader = SubResource( 31 )
shader_param/hue = 0.0

[sub_resource type="Gradient" id=25]
offsets = PoolRealArray( 0.0504808, 0.372596, 1 )
colors = PoolColorArray( 0, 0, 0, 1, 0.0612059, 0.0479736, 0.09375, 1, 0.619608, 0.137255, 0.215686, 1 )

[sub_resource type="GradientTexture2D" id=26]
gradient = SubResource( 25 )
width = 800
height = 600
fill_to = Vector2( 0, 1 )

[sub_resource type="OpenSimplexNoise" id=15]
seed = 2426
period = 108.0
persistence = 0.76
lacunarity = 1.75

[sub_resource type="NoiseTexture" id=9]
height = 256
seamless = true
noise = SubResource( 15 )

[sub_resource type="OpenSimplexNoise" id=16]
seed = 3427
octaves = 2
period = 47.1
persistence = 0.661
lacunarity = 1.75

[sub_resource type="NoiseTexture" id=17]
height = 256
seamless = true
noise = SubResource( 16 )

[sub_resource type="ShaderMaterial" id=10]
shader = ExtResource( 5 )
shader_param/time_offset = null
shader_param/speed = 0.1
shader_param/top_color = Color( 0.11, 0.07, 0.17, 1 )
shader_param/bottom_color = Color( 1, 0.270588, 0.509804, 1 )
shader_param/noise0 = SubResource( 9 )
shader_param/noise1 = SubResource( 17 )

[sub_resource type="OpenSimplexNoise" id=8]
seed = 1476
octaves = 2
period = 220.0

[sub_resource type="NoiseTexture" id=5]
height = 256
seamless = true
noise = SubResource( 8 )

[sub_resource type="OpenSimplexNoise" id=12]
seed = 1773
period = 52.0
persistence = 0.37
lacunarity = 0.94

[sub_resource type="NoiseTexture" id=13]
height = 256
seamless = true
noise = SubResource( 12 )

[sub_resource type="ShaderMaterial" id=14]
shader = ExtResource( 5 )
shader_param/time_offset = null
shader_param/speed = 0.1
shader_param/top_color = Color( 0.11, 0.07, 0.17, 1 )
shader_param/bottom_color = Color( 1, 0.27, 0.51, 1 )
shader_param/noise0 = SubResource( 5 )
shader_param/noise1 = SubResource( 13 )

[sub_resource type="OpenSimplexNoise" id=21]
seed = 1476
octaves = 1
period = 225.5
persistence = 0.469
lacunarity = 0.78

[sub_resource type="NoiseTexture" id=22]
height = 42
seamless = true
noise = SubResource( 21 )

[sub_resource type="OpenSimplexNoise" id=23]
seed = 2952
octaves = 2
period = 97.1
persistence = 0.661
lacunarity = 1.75

[sub_resource type="NoiseTexture" id=24]
height = 256
seamless = true
noise = SubResource( 23 )

[sub_resource type="ShaderMaterial" id=27]
shader = ExtResource( 5 )
shader_param/time_offset = null
shader_param/speed = 0.1
shader_param/top_color = Color( 0.11, 0.07, 0.17, 1 )
shader_param/bottom_color = Color( 1, 0.27, 0.51, 1 )
shader_param/noise0 = SubResource( 22 )
shader_param/noise1 = SubResource( 24 )

[sub_resource type="OpenSimplexNoise" id=28]
seed = 1476
octaves = 2
period = 170.5
persistence = 0.855
lacunarity = 3.51

[sub_resource type="NoiseTexture" id=29]
height = 256
seamless = true
noise = SubResource( 28 )

[sub_resource type="OpenSimplexNoise" id=6]
seed = 538
octaves = 2
period = 101.9

[sub_resource type="NoiseTexture" id=7]
height = 256
seamless = true
noise = SubResource( 6 )

[sub_resource type="ShaderMaterial" id=30]
shader = ExtResource( 5 )
shader_param/time_offset = null
shader_param/speed = 0.1
shader_param/top_color = Color( 0.11, 0.07, 0.17, 1 )
shader_param/bottom_color = Color( 1, 0.27, 0.51, 1 )
shader_param/noise0 = SubResource( 29 )
shader_param/noise1 = SubResource( 7 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Cloud1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 489, 84 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Cloud3:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 599, -117 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Cloud4:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -69, -42 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Cloud2:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 279, 29 ) ]
}

[sub_resource type="Animation" id=37]
length = 180.0
loop = true
step = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("Cloud1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 180 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 489, -164 ), Vector2( -311, -164 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Cloud3:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 180 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 599, -117 ), Vector2( -201, -117 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Cloud4:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 180 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 731, -42 ), Vector2( -69, -42 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Cloud2:position")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 180 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 279, 29 ), Vector2( -521, 29 ) ]
}

[sub_resource type="DynamicFont" id=33]
font_data = ExtResource( 4 )

[sub_resource type="Theme" id=34]
default_font = SubResource( 33 )

[sub_resource type="DynamicFont" id=35]
size = 20
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[node name="Sunset" type="Node2D"]
script = ExtResource( 3 )

[node name="SkyLayer" type="CanvasLayer" parent="."]
layer = -2

[node name="Sky" type="Sprite" parent="SkyLayer"]
unique_name_in_owner = true
material = SubResource( 32 )
position = Vector2( 400, 300 )
texture = SubResource( 26 )
__meta__ = {
"_edit_lock_": true
}

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
layer = -1

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2( 0, 25 )
motion_scale = Vector2( 0.25, 0.25 )
motion_offset = Vector2( 400, 0 )
motion_mirroring = Vector2( 800, 0 )

[node name="Cloud1" parent="ParallaxBackground/ParallaxLayer" instance=ExtResource( 2 )]
unique_name_in_owner = true
material = SubResource( 10 )
position = Vector2( 489, 84 )

[node name="Cloud2" parent="ParallaxBackground/ParallaxLayer" instance=ExtResource( 2 )]
unique_name_in_owner = true
material = SubResource( 14 )
position = Vector2( 279, 29 )
texture = ExtResource( 7 )

[node name="Cloud3" parent="ParallaxBackground/ParallaxLayer" instance=ExtResource( 2 )]
unique_name_in_owner = true
material = SubResource( 27 )
position = Vector2( 599, -117 )
texture = ExtResource( 6 )

[node name="Cloud4" parent="ParallaxBackground/ParallaxLayer" instance=ExtResource( 2 )]
unique_name_in_owner = true
material = SubResource( 30 )
position = Vector2( -69, -42 )
texture = ExtResource( 8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="ParallaxBackground/ParallaxLayer"]
autoplay = "base"
anims/RESET = SubResource( 2 )
anims/base = SubResource( 37 )

[node name="Pool" parent="." instance=ExtResource( 1 )]
unique_name_in_owner = true
position = Vector2( 399, 337 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 400, 300 )
current = true
smoothing_enabled = true
smoothing_speed = 6.66

[node name="HudLayer" type="CanvasLayer" parent="."]

[node name="ControlBar" type="HBoxContainer" parent="HudLayer"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -48.0
margin_bottom = -16.0
theme = SubResource( 34 )
custom_constants/separation = 16
alignment = 1

[node name="Label" type="Label" parent="HudLayer/ControlBar"]
margin_left = 139.0
margin_top = 4.0
margin_right = 219.0
margin_bottom = 28.0
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 35 )
text = "Controls:"

[node name="CloudButton" type="Button" parent="HudLayer/ControlBar"]
margin_left = 235.0
margin_right = 296.0
margin_bottom = 32.0
toggle_mode = true
text = "Clouds"

[node name="SkyButton" type="Button" parent="HudLayer/ControlBar"]
margin_left = 312.0
margin_right = 350.0
margin_bottom = 32.0
toggle_mode = true
text = "Sky"

[node name="WaterButton" type="Button" parent="HudLayer/ControlBar"]
margin_left = 366.0
margin_right = 419.0
margin_bottom = 32.0
toggle_mode = true
text = "Water"

[node name="CrtButton" type="Button" parent="HudLayer/ControlBar"]
margin_left = 435.0
margin_right = 516.0
margin_bottom = 32.0
text = "Scanlines"

[node name="ImpactButton" type="Button" parent="HudLayer/ControlBar"]
margin_left = 532.0
margin_right = 593.0
margin_bottom = 32.0
text = "Impact"

[node name="ResetButton" type="Button" parent="HudLayer/ControlBar"]
margin_left = 609.0
margin_right = 660.0
margin_bottom = 32.0
text = "Reset"

[node name="Popups" type="Control" parent="HudLayer"]
margin_right = 40.0
margin_bottom = 40.0
theme = SubResource( 34 )

[node name="CloudPopup" type="WindowDialog" parent="HudLayer/Popups"]
unique_name_in_owner = true
margin_left = 12.0
margin_top = 32.0
margin_right = 343.0
margin_bottom = 555.0
size_flags_horizontal = 3
size_flags_vertical = 3
window_title = "Cloud Control"

[node name="CenterContainer" type="CenterContainer" parent="HudLayer/Popups/CloudPopup"]
margin_right = 328.0
margin_bottom = 466.0

[node name="VBoxContainer" type="VBoxContainer" parent="HudLayer/Popups/CloudPopup/CenterContainer"]
margin_left = 4.0
margin_right = 324.0
margin_bottom = 512.0

[node name="HSeparator1" type="HSeparator" parent="HudLayer/Popups/CloudPopup/CenterContainer/VBoxContainer"]
margin_right = 320.0
margin_bottom = 4.0

[node name="SpeedLabel" type="Label" parent="HudLayer/Popups/CloudPopup/CenterContainer/VBoxContainer"]
margin_top = 8.0
margin_right = 320.0
margin_bottom = 27.0
text = "Morph Speed:"

[node name="HSlider" type="HSlider" parent="HudLayer/Popups/CloudPopup/CenterContainer/VBoxContainer"]
margin_top = 31.0
margin_right = 320.0
margin_bottom = 47.0
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
value = 0.1

[node name="HSeparator2" type="HSeparator" parent="HudLayer/Popups/CloudPopup/CenterContainer/VBoxContainer"]
margin_top = 51.0
margin_right = 320.0
margin_bottom = 55.0

[node name="ColorLabel" type="Label" parent="HudLayer/Popups/CloudPopup/CenterContainer/VBoxContainer"]
margin_top = 59.0
margin_right = 320.0
margin_bottom = 78.0
text = "Color:"

[node name="ColorPicker" type="ColorPicker" parent="HudLayer/Popups/CloudPopup/CenterContainer/VBoxContainer"]
margin_left = 56.0
margin_top = 138.0
margin_right = 376.0
margin_bottom = 568.0
color = Color( 1, 0.270588, 0.509804, 1 )
edit_alpha = false
presets_enabled = false
presets_visible = false

[node name="SkyPopup" type="WindowDialog" parent="HudLayer/Popups"]
unique_name_in_owner = true
margin_left = 228.0
margin_top = 80.0
margin_right = 544.0
margin_bottom = 134.0
size_flags_horizontal = 3
size_flags_vertical = 3
window_title = "Sky Control"

[node name="CenterContainer" type="PanelContainer" parent="HudLayer/Popups/SkyPopup"]
margin_right = 317.0
margin_bottom = 30.0
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HudLayer/Popups/SkyPopup/CenterContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 310.0
margin_bottom = 46.0

[node name="Label" type="Label" parent="HudLayer/Popups/SkyPopup/CenterContainer/VBoxContainer"]
margin_right = 303.0
margin_bottom = 19.0
text = "Sky Hue Shift:"

[node name="HSlider" type="HSlider" parent="HudLayer/Popups/SkyPopup/CenterContainer/VBoxContainer"]
margin_top = 23.0
margin_right = 303.0
margin_bottom = 39.0
size_flags_horizontal = 3
max_value = 1.0
step = 0.01

[node name="WaterPopup" type="WindowDialog" parent="HudLayer/Popups"]
unique_name_in_owner = true
margin_left = 400.0
margin_top = 20.0
margin_right = 735.0
margin_bottom = 601.0
size_flags_horizontal = 3
size_flags_vertical = 3
window_title = "Water Control"

[node name="CenterContainer" type="PanelContainer" parent="HudLayer/Popups/WaterPopup"]
margin_right = 317.0
margin_bottom = 30.0
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HudLayer/Popups/WaterPopup/CenterContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 327.0
margin_bottom = 570.0

[node name="HSeparator1" type="HSeparator" parent="HudLayer/Popups/WaterPopup/CenterContainer/VBoxContainer"]
margin_right = 320.0
margin_bottom = 4.0

[node name="OpacityLabel" type="Label" parent="HudLayer/Popups/WaterPopup/CenterContainer/VBoxContainer"]
margin_top = 8.0
margin_right = 320.0
margin_bottom = 27.0
text = "Opacity"

[node name="OpacitySlider" type="HSlider" parent="HudLayer/Popups/WaterPopup/CenterContainer/VBoxContainer"]
margin_top = 31.0
margin_right = 320.0
margin_bottom = 47.0
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
value = 0.25

[node name="HSeparator2" type="HSeparator" parent="HudLayer/Popups/WaterPopup/CenterContainer/VBoxContainer"]
margin_top = 51.0
margin_right = 320.0
margin_bottom = 55.0

[node name="WaveSpeedLabel" type="Label" parent="HudLayer/Popups/WaterPopup/CenterContainer/VBoxContainer"]
margin_top = 59.0
margin_right = 320.0
margin_bottom = 78.0
text = "Wave Speed:"

[node name="WaveSpeedSlider" type="HSlider" parent="HudLayer/Popups/WaterPopup/CenterContainer/VBoxContainer"]
margin_top = 82.0
margin_right = 320.0
margin_bottom = 98.0
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
value = 0.5

[node name="HSeparator3" type="HSeparator" parent="HudLayer/Popups/WaterPopup/CenterContainer/VBoxContainer"]
margin_top = 102.0
margin_right = 320.0
margin_bottom = 106.0

[node name="ReflectColorLabel" type="Label" parent="HudLayer/Popups/WaterPopup/CenterContainer/VBoxContainer"]
margin_top = 110.0
margin_right = 320.0
margin_bottom = 129.0
text = "Reflect Color:"

[node name="ColorPicker" type="ColorPicker" parent="HudLayer/Popups/WaterPopup/CenterContainer/VBoxContainer"]
margin_left = 8.0
margin_top = 141.0
margin_right = 328.0
margin_bottom = 571.0
color = Color( 0.619608, 0.137255, 0.254902, 1 )
edit_alpha = false
presets_enabled = false
presets_visible = false

[connection signal="pressed" from="HudLayer/ControlBar/CloudButton" to="HudLayer/Popups/CloudPopup" method="_set_position" binds= [ Vector2( 12, 32 ) ]]
[connection signal="toggled" from="HudLayer/ControlBar/CloudButton" to="." method="_toggle_cloud_popup"]
[connection signal="pressed" from="HudLayer/ControlBar/SkyButton" to="HudLayer/Popups/SkyPopup" method="_set_position" binds= [ Vector2( 228, 80 ) ]]
[connection signal="toggled" from="HudLayer/ControlBar/SkyButton" to="." method="_toggle_sky_popup"]
[connection signal="pressed" from="HudLayer/ControlBar/WaterButton" to="HudLayer/Popups/WaterPopup" method="_set_position" binds= [ Vector2( 400, 20 ) ]]
[connection signal="toggled" from="HudLayer/ControlBar/WaterButton" to="." method="_toggle_water_popup"]
[connection signal="pressed" from="HudLayer/ControlBar/CrtButton" to="." method="emit_signal" binds= [ "toggle_crt" ]]
[connection signal="pressed" from="HudLayer/ControlBar/ImpactButton" to="." method="emit_signal" binds= [ "add_impact" ]]
[connection signal="pressed" from="HudLayer/ControlBar/ResetButton" to="." method="emit_signal" binds= [ "reset" ]]
[connection signal="hide" from="HudLayer/Popups/CloudPopup" to="HudLayer/ControlBar/CloudButton" method="set_pressed" binds= [ false ]]
[connection signal="value_changed" from="HudLayer/Popups/CloudPopup/CenterContainer/VBoxContainer/HSlider" to="." method="_set_cloud_speed"]
[connection signal="color_changed" from="HudLayer/Popups/CloudPopup/CenterContainer/VBoxContainer/ColorPicker" to="." method="_set_cloud_color"]
[connection signal="hide" from="HudLayer/Popups/SkyPopup" to="HudLayer/ControlBar/SkyButton" method="set_pressed" binds= [ false ]]
[connection signal="value_changed" from="HudLayer/Popups/SkyPopup/CenterContainer/VBoxContainer/HSlider" to="." method="_set_sky_hue_shift"]
[connection signal="hide" from="HudLayer/Popups/WaterPopup" to="HudLayer/ControlBar/WaterButton" method="set_pressed" binds= [ false ]]
[connection signal="value_changed" from="HudLayer/Popups/WaterPopup/CenterContainer/VBoxContainer/OpacitySlider" to="." method="_set_water_opacity"]
[connection signal="value_changed" from="HudLayer/Popups/WaterPopup/CenterContainer/VBoxContainer/WaveSpeedSlider" to="." method="_set_water_wave_speed"]
[connection signal="color_changed" from="HudLayer/Popups/WaterPopup/CenterContainer/VBoxContainer/ColorPicker" to="." method="_set_water_reflect_color"]
